--- a/preview/tag-component/angular/components/tag/tag.component.html
+++ b/preview/tag-component/angular/components/tag/tag.component.html
@@ -5,9 +5,8 @@
     [attr.data-color]="color()"
     [attr.data-compact-spacing]="compactSpacing()"
 >
-    <ng-container *ngIf="showLeftIcon() && 
-    computedIconName && isValidIconName(computedIconName)">
-        <rte-icon [name]="computedIconName" [size]="16"></rte-icon>
+    <ng-container *ngIf="showLeftIcon() && isValidIconName()">
+        <rte-icon [name]="computedIconName()" [size]="16"></rte-icon>
     </ng-container>
     <ng-container *ngIf="label">
         <label class="tag-label">{{ label() }}</label>
