--- a/packages/angular/projects/ds-rte-lib/src/lib/components/link/link.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/link/link.component.html
@@ -1,4 +1,4 @@
-<a href="{{ href() }}" class="rte-link" role="link" [ngClass]="{'subtle': subtle()}" [rel]="this.externalLink() ? 'noopener noreferrer' : null">
+<a href="{{ href() }}" class="rte-link" role="link" [ngClass]="{'subtle': subtle()}" [target]="externalLink() ? '_blank' : undefined" [rel]="externalLink() ? 'noopener noreferrer' : null">
     <span class="rte-link-label">
         {{ label() }}
     </span>
