--- a/packages/angular/projects/ds-rte-lib/src/lib/components/textarea/textarea.component.html
+++ b/packages/angular/projects/ds-rte-lib/src/lib/components/textarea/textarea.component.html
@@ -3,7 +3,7 @@
   <div class="top-position-container" [attr.data-label-position]="labelPosition()">
     <div class="header-container" [attr.data-label-position]="labelPosition()">
       <label *ngIf="label() && labelPosition() === 'top'" [attr.id]="labelId()" [attr.for]="id()">{{label()}}<span *ngIf="required() || showLabelRequirement()" class="requirement-indicator" aria-hidden="true" [ngClass]="{'required': required(), 'show-label-requirement': showLabelRequirement() }">{{requirementIndicatorValue()}}</span></label>
-      <span *ngIf="maxLength()" class="character-counter">{{ characterCount }}/{{ maxLength() }}</span>
+      <span *ngIf="isCounterVisible()" class="character-counter">{{ characterCount }}/{{ maxLength() }}</span>
     </div>
     <div class="textarea-container" [attr.data-label-position]="labelPosition()">
       <textarea
@@ -25,7 +25,7 @@
       ></textarea>
       <rte-link *ngIf="isAssistiveTextLinkVisible()" class="assistive-text-link" [externalLink]="true" [href]="assistiveTextLink() || ''" [label]="assistiveTextLabel() || ''">
       </rte-link>
-      <div *ngIf="assistiveTextAppearance() !== 'link'" class="assistive-text {{ assistiveTextAppearance() }}" [ngClass]="disabled() ? 'disabled' : ''">
+      <div *ngIf="assistiveTextAppearance() !== 'link'" class="assistive-text {{ assistiveTextAppearance() }}" [ngClass]="{'disabled' : disabled()}">
         <rte-icon *ngIf="assistiveTextAppearance() === 'error'" name="error" [size]="assistiveTextIconSize"></rte-icon>
         <rte-icon *ngIf="assistiveTextAppearance() === 'success'" name="check-circle" [size]="assistiveTextIconSize"></rte-icon>
         <span>{{ assistiveTextLabel() }}</span>
