deploy: bafde7b238f6bda66e150ccc81f94828a79d3265

--- a/preview/add-text-area/angular/components/textarea/textarea.component.html
+++ b/preview/add-text-area/angular/components/textarea/textarea.component.html
@@ -25,7 +25,7 @@
       ></textarea>
       <rte-link *ngIf="isAssistiveTextLinkVisible()" class="assistive-text-link" [externalLink]="true" [href]="assistiveTextLink() || ''" [label]="assistiveTextLabel() || ''">
       </rte-link>
-      <div *ngIf="assistiveTextAppearance() !== 'link'" class="assistive-text {{ assistiveTextAppearance() }}" [ngClass]="disabled() ? 'disabled' : ''">
+      <div *ngIf="assistiveTextAppearance() !== 'link'" class="assistive-text {{ assistiveTextAppearance() }}" [ngClass]="{'disabled' : disabled()}">
         <rte-icon *ngIf="assistiveTextAppearance() === 'error'" name="error" [size]="assistiveTextIconSize"></rte-icon>
         <rte-icon *ngIf="assistiveTextAppearance() === 'success'" name="check-circle" [size]="assistiveTextIconSize"></rte-icon>
         <span>{{ assistiveTextLabel() }}</span>
