chore: update colors tokens

--- a/packages/core/design-tokens/tokens/themes/_vert-foret-dark.scss
+++ b/packages/core/design-tokens/tokens/themes/_vert-foret-dark.scss
@@ -4,7 +4,10 @@
 $vert-foret-dark: (
   "background-default": $greyscale-900,
   "background-hover": $greyscale-800,
-  "background-pressed": $greyscale-700,
+  "background-neutral-regular-default": $greyscale-700,
+  "background-neutral-regular-hover": $greyscale-550,
+  "background-neutral-bold-default": $greyscale-200,
+  "background-neutral-bold-hover": $greyscale-50,
   "background-disabled": $greyscale-800,
   "background-inverse": $core-white,
   "background-brand-default": $vert-foret-300,
@@ -20,13 +23,13 @@ $vert-foret-dark: (
   "background-danger-default": $rouge-indications-400,
   "background-danger-hover": $rouge-indications-500,
   "background-danger-pressed": $rouge-indications-600,
+  "background-status-info-regular": $bleu-digital-400,
   "background-status-info-subtle": $bleu-digital-100,
-  "background-status-info": $bleu-digital-400,
-  "background-status-warning": $jaune-500,
+  "background-status-warning-regular": $jaune-500,
   "background-status-warning-subtle": $jaune-100,
-  "background-status-success": $vert-digital-400,
+  "background-status-success-regular": $vert-digital-400,
   "background-status-success-subtle": $vert-digital-200,
-  "background-status-alert": $rouge-indications-500,
+  "background-status-alert-regular": $rouge-indications-500,
   "background-status-alert-subtle": $rouge-indications-100,
   "border-primary": $greyscale-400,
   "border-secondary": $greyscale-600,
@@ -93,8 +96,6 @@ $vert-foret-dark: (
   "content-secondary": $greyscale-100,
   "content-tertiary": $greyscale-300,
   "content-primary-inverse": $greyscale-900,
-  "content-secondary-inverse": $greyscale-800,
-  "content-tertiary-inverse": $greyscale-600,
   "content-disabled": $greyscale-700,
   "content-brand-default": $vert-foret-0,
   "content-brand-hover": $vert-foret-50,
@@ -107,17 +108,7 @@ $vert-foret-dark: (
   "content-link-visited-press": $violet-300,
   "content-danger": $rouge-indications-400,
   "content-danger-hover": $rouge-indications-500,
-  "content-danger-press": $rouge-indications-600,
   "content-danger-inverse": $core-white,
-  "content-info": $bleu-digital-500,
-  "content-info-inverse": $core-white,
-  "content-info-bold": $bleu-digital-400,
-  "content-warning": $jaune-indications-400,
-  "content-warning-inverse": $core-white,
-  "content-warning-bold": $jaune-indications-300,
-  "content-success": $vert-digital-600,
-  "content-success-inverse": $core-white,
-  "content-success-bold": $vert-digital-500,
   "content-decorative": $greyscale-900,
   "content-status": $greyscale-900,
   "decorative-neutral": $greyscale-50,
@@ -153,7 +144,6 @@ $vert-foret-dark: (
   "elevation-shadow-key": rgba(0, 0, 0, 0.28),
   "elevation-shadow-key-darker": rgba(0, 0, 0, 0.48),
   "elevation-shadow-key-brand": rgba(0, 0, 0, 0.21),
-  "gradient-default": #ffffff,
   // TODO remove this color (not a real token)
   "background-brand-hover-opacity-20": $vert-foret-200-opacity-20,
   // TODO remove this color (not a real token)
