--- a/preview/add-cancel-icon/angular/main.css
+++ b/preview/add-cancel-icon/angular/main.css
@@ -298,7 +298,10 @@
 [data-theme=bleu_iceberg][data-mode=light] {
   --background-default: #ffffff;
   --background-hover: #ebebea;
-  --background-pressed: #e1e1e0;
+  --background-neutral-regular-default: #e1e1e0;
+  --background-neutral-regular-hover: #c2c1c0;
+  --background-neutral-bold-default: #737272;
+  --background-neutral-bold-hover: #4c4c4b;
   --background-disabled: #f4f5f4;
   --background-inverse: #201f1f;
   --background-brand-default: #2964a0;
@@ -314,13 +317,13 @@
   --background-danger-default: #de2048;
   --background-danger-hover: #c81640;
   --background-danger-pressed: #9d1439;
+  --background-status-info-regular: #53aaff;
   --background-status-info-subtle: #d8ebff;
-  --background-status-info: #53aaff;
-  --background-status-warning: #ffe500;
+  --background-status-warning-regular: #ffe500;
   --background-status-warning-subtle: #faffc1;
-  --background-status-success: #3cec96;
+  --background-status-success-regular: #3cec96;
   --background-status-success-subtle: #b5fdd9;
-  --background-status-alert: #f14662;
+  --background-status-alert-regular: #f14662;
   --background-status-alert-subtle: #ffe4e6;
   --border-primary: #737272;
   --border-secondary: #a1a1a0;
@@ -387,8 +390,6 @@
   --content-secondary: #3e3e3d;
   --content-tertiary: #737272;
   --content-primary-inverse: #ffffff;
-  --content-secondary-inverse: #e1e1e0;
-  --content-tertiary-inverse: #b7b7b6;
   --content-disabled: #cdcccb;
   --content-brand-default: #2964a0;
   --content-brand-hover: #225082;
@@ -401,17 +402,7 @@
   --content-link-visited-press: #563c6c;
   --content-danger: #de2048;
   --content-danger-hover: #c81640;
-  --content-danger-press: #9d1439;
   --content-danger-inverse: #ffffff;
-  --content-info: #2b86ff;
-  --content-info-inverse: #ffffff;
-  --content-info-bold: #1465fc;
-  --content-warning: #f4922b;
-  --content-warning-inverse: #ffffff;
-  --content-warning-bold: #ed6e13;
-  --content-success: #09b05f;
-  --content-success-inverse: #ffffff;
-  --content-success-bold: #0b8a4d;
   --content-decorative: #201f1f;
   --content-status: #201f1f;
   --decorative-neutral: #ebebea;
@@ -447,7 +438,6 @@
   --elevation-shadow-key: rgba(0, 0, 0, 0.14);
   --elevation-shadow-key-darker: rgba(0, 0, 0, 0.24);
   --elevation-shadow-key-brand: rgba(0, 0, 0, 0.31);
-  --gradient-default: #ffffff;
   --background-brand-hover-opacity-20: rgba(34, 80, 130, 0.2);
   --background-danger-hover-opacity-20: rgba(200, 22, 64, 0.2);
   --background-hover-opacity-50: rgba(235, 235, 234, 0.5);
@@ -456,7 +446,10 @@
 [data-theme=bleu_iceberg][data-mode=dark] {
   --background-default: #201f1f;
   --background-hover: #3e3e3d;
-  --background-pressed: #595958;
+  --background-neutral-regular-default: #595958;
+  --background-neutral-regular-hover: #7f7e7e;
+  --background-neutral-bold-default: #cdcccb;
+  --background-neutral-bold-hover: #ebebea;
   --background-disabled: #3e3e3d;
   --background-inverse: #ffffff;
   --background-brand-default: #96bde3;
@@ -472,13 +465,13 @@
   --background-danger-default: #f97385;
   --background-danger-hover: #f14662;
   --background-danger-pressed: #de2048;
+  --background-status-info-regular: #53aaff;
   --background-status-info-subtle: #d8ebff;
-  --background-status-info: #53aaff;
-  --background-status-warning: #ffe500;
+  --background-status-warning-regular: #ffe500;
   --background-status-warning-subtle: #faffc1;
-  --background-status-success: #3cec96;
+  --background-status-success-regular: #3cec96;
   --background-status-success-subtle: #b5fdd9;
-  --background-status-alert: #f14662;
+  --background-status-alert-regular: #f14662;
   --background-status-alert-subtle: #ffe4e6;
   --border-primary: #a1a1a0;
   --border-secondary: #737272;
@@ -545,8 +538,6 @@
   --content-secondary: #e1e1e0;
   --content-tertiary: #b7b7b6;
   --content-primary-inverse: #201f1f;
-  --content-secondary-inverse: #3e3e3d;
-  --content-tertiary-inverse: #737272;
   --content-disabled: #595958;
   --content-brand-default: #f9fbfd;
   --content-brand-hover: #f3f6fc;
@@ -559,17 +550,7 @@
   --content-link-visited-press: #d2c3e4;
   --content-danger: #f97385;
   --content-danger-hover: #f14662;
-  --content-danger-press: #de2048;
   --content-danger-inverse: #ffffff;
-  --content-info: #2b86ff;
-  --content-info-inverse: #ffffff;
-  --content-info-bold: #53aaff;
-  --content-warning: #f4922b;
-  --content-warning-inverse: #ffffff;
-  --content-warning-bold: #f6ab4d;
-  --content-success: #09b05f;
-  --content-success-inverse: #ffffff;
-  --content-success-bold: #12d577;
   --content-decorative: #201f1f;
   --content-status: #201f1f;
   --decorative-neutral: #ebebea;
@@ -605,7 +586,6 @@
   --elevation-shadow-key: rgba(0, 0, 0, 0.28);
   --elevation-shadow-key-darker: rgba(0, 0, 0, 0.48);
   --elevation-shadow-key-brand: rgba(0, 0, 0, 0.21);
-  --gradient-default: #ffffff;
   --background-brand-hover-opacity-20: rgba(199, 219, 240, 0.2);
   --background-danger-hover-opacity-20: rgba(241, 70, 98, 0.2);
   --background-hover-opacity-50: rgba(62, 62, 61, 0.5);
@@ -614,7 +594,10 @@
 [data-theme=violet][data-mode=light] {
   --background-default: #ffffff;
   --background-hover: #ebebea;
-  --background-pressed: #e1e1e0;
+  --background-neutral-regular-default: #e1e1e0;
+  --background-neutral-regular-hover: #c2c1c0;
+  --background-neutral-bold-default: #737272;
+  --background-neutral-bold-hover: #4c4c4b;
   --background-disabled: #f4f5f4;
   --background-inverse: #201f1f;
   --background-brand-default: #7d5a9f;
@@ -630,13 +613,13 @@
   --background-danger-default: #de2048;
   --background-danger-hover: #c81640;
   --background-danger-pressed: #9d1439;
+  --background-status-info-regular: #53aaff;
   --background-status-info-subtle: #d8ebff;
-  --background-status-info: #53aaff;
-  --background-status-warning: #ffe500;
+  --background-status-warning-regular: #ffe500;
   --background-status-warning-subtle: #faffc1;
-  --background-status-success: #3cec96;
+  --background-status-success-regular: #3cec96;
   --background-status-success-subtle: #b5fdd9;
-  --background-status-alert: #f14662;
+  --background-status-alert-regular: #f14662;
   --background-status-alert-subtle: #ffe4e6;
   --border-primary: #737272;
   --border-secondary: #a1a1a0;
@@ -703,8 +686,6 @@
   --content-secondary: #3e3e3d;
   --content-tertiary: #737272;
   --content-primary-inverse: #ffffff;
-  --content-secondary-inverse: #e1e1e0;
-  --content-tertiary-inverse: #b7b7b6;
   --content-disabled: #cdcccb;
   --content-brand-default: #7d5a9f;
   --content-brand-hover: #674883;
@@ -717,17 +698,7 @@
   --content-link-visited-press: #563c6c;
   --content-danger: #de2048;
   --content-danger-hover: #c81640;
-  --content-danger-press: #9d1439;
   --content-danger-inverse: #ffffff;
-  --content-info: #2b86ff;
-  --content-info-inverse: #ffffff;
-  --content-info-bold: #1465fc;
-  --content-warning: #f4922b;
-  --content-warning-inverse: #ffffff;
-  --content-warning-bold: #ed6e13;
-  --content-success: #09b05f;
-  --content-success-inverse: #ffffff;
-  --content-success-bold: #0b8a4d;
   --content-decorative: #201f1f;
   --content-status: #201f1f;
   --decorative-neutral: #ebebea;
@@ -763,7 +734,6 @@
   --elevation-shadow-key: rgba(0, 0, 0, 0.14);
   --elevation-shadow-key-darker: rgba(0, 0, 0, 0.24);
   --elevation-shadow-key-brand: rgba(0, 0, 0, 0.31);
-  --gradient-default: #ffffff;
   --background-brand-hover-opacity-20: rgba(103, 72, 131, 0.2);
   --background-danger-hover-opacity-20: rgba(200, 22, 64, 0.2);
   --background-hover-opacity-50: rgba(235, 235, 234, 0.5);
@@ -772,7 +742,10 @@
 [data-theme=violet][data-mode=dark] {
   --background-default: #201f1f;
   --background-hover: #3e3e3d;
-  --background-pressed: #595958;
+  --background-neutral-regular-default: #595958;
+  --background-neutral-regular-hover: #7f7e7e;
+  --background-neutral-bold-default: #cdcccb;
+  --background-neutral-bold-hover: #ebebea;
   --background-disabled: #3e3e3d;
   --background-inverse: #ffffff;
   --background-brand-default: #d2c3e4;
@@ -788,13 +761,13 @@
   --background-danger-default: #f97385;
   --background-danger-hover: #f14662;
   --background-danger-pressed: #de2048;
+  --background-status-info-regular: #53aaff;
   --background-status-info-subtle: #d8ebff;
-  --background-status-info: #53aaff;
-  --background-status-warning: #ffe500;
+  --background-status-warning-regular: #ffe500;
   --background-status-warning-subtle: #faffc1;
-  --background-status-success: #3cec96;
+  --background-status-success-regular: #3cec96;
   --background-status-success-subtle: #b5fdd9;
-  --background-status-alert: #f14662;
+  --background-status-alert-regular: #f14662;
   --background-status-alert-subtle: #ffe4e6;
   --border-primary: #a1a1a0;
   --border-secondary: #737272;
@@ -861,8 +834,6 @@
   --content-secondary: #e1e1e0;
   --content-tertiary: #b7b7b6;
   --content-primary-inverse: #201f1f;
-  --content-secondary-inverse: #3e3e3d;
-  --content-tertiary-inverse: #737272;
   --content-disabled: #595958;
   --content-brand-default: #fcfbfd;
   --content-brand-hover: #f9f7fc;
@@ -875,17 +846,7 @@
   --content-link-visited-press: #d2c3e4;
   --content-danger: #f97385;
   --content-danger-hover: #f14662;
-  --content-danger-press: #de2048;
   --content-danger-inverse: #ffffff;
-  --content-info: #2b86ff;
-  --content-info-inverse: #ffffff;
-  --content-info-bold: #53aaff;
-  --content-warning: #f4922b;
-  --content-warning-inverse: #ffffff;
-  --content-warning-bold: #f6ab4d;
-  --content-success: #09b05f;
-  --content-success-inverse: #ffffff;
-  --content-success-bold: #12d577;
   --content-decorative: #201f1f;
   --content-status: #201f1f;
   --decorative-neutral: #ebebea;
@@ -921,7 +882,6 @@
   --elevation-shadow-key: rgba(0, 0, 0, 0.28);
   --elevation-shadow-key-darker: rgba(0, 0, 0, 0.48);
   --elevation-shadow-key-brand: rgba(0, 0, 0, 0.21);
-  --gradient-default: #ffffff;
   --background-brand-hover-opacity-20: rgba(230, 222, 240, 0.2);
   --background-danger-hover-opacity-20: rgba(241, 70, 98, 0.2);
   --background-hover-opacity-50: rgba(62, 62, 61, 0.5);
@@ -930,7 +890,10 @@
 [data-theme=vert_foret][data-mode=light] {
   --background-default: #ffffff;
   --background-hover: #ebebea;
-  --background-pressed: #e1e1e0;
+  --background-neutral-regular-default: #e1e1e0;
+  --background-neutral-regular-hover: #c2c1c0;
+  --background-neutral-bold-default: #737272;
+  --background-neutral-bold-hover: #4c4c4b;
   --background-disabled: #f4f5f4;
   --background-inverse: #201f1f;
   --background-brand-default: #1b8065;
@@ -946,13 +909,13 @@
   --background-danger-default: #de2048;
   --background-danger-hover: #c81640;
   --background-danger-pressed: #9d1439;
+  --background-status-info-regular: #53aaff;
   --background-status-info-subtle: #d8ebff;
-  --background-status-info: #53aaff;
-  --background-status-warning: #ffe500;
+  --background-status-warning-regular: #ffe500;
   --background-status-warning-subtle: #faffc1;
-  --background-status-success: #3cec96;
+  --background-status-success-regular: #3cec96;
   --background-status-success-subtle: #b5fdd9;
-  --background-status-alert: #f14662;
+  --background-status-alert-regular: #f14662;
   --background-status-alert-subtle: #ffe4e6;
   --border-primary: #737272;
   --border-secondary: #a1a1a0;
@@ -1019,8 +982,6 @@
   --content-secondary: #3e3e3d;
   --content-tertiary: #737272;
   --content-primary-inverse: #ffffff;
-  --content-secondary-inverse: #e1e1e0;
-  --content-tertiary-inverse: #b7b7b6;
   --content-disabled: #cdcccb;
   --content-brand-default: #1b8065;
   --content-brand-hover: #176b57;
@@ -1033,17 +994,7 @@
   --content-link-visited-press: #563c6c;
   --content-danger: #de2048;
   --content-danger-hover: #c81640;
-  --content-danger-press: #9d1439;
   --content-danger-inverse: #ffffff;
-  --content-info: #2b86ff;
-  --content-info-inverse: #ffffff;
-  --content-info-bold: #1465fc;
-  --content-warning: #f4922b;
-  --content-warning-inverse: #ffffff;
-  --content-warning-bold: #ed6e13;
-  --content-success: #09b05f;
-  --content-success-inverse: #ffffff;
-  --content-success-bold: #0b8a4d;
   --content-decorative: #201f1f;
   --content-status: #201f1f;
   --decorative-neutral: #ebebea;
@@ -1079,7 +1030,6 @@
   --elevation-shadow-key: rgba(0, 0, 0, 0.14);
   --elevation-shadow-key-darker: rgba(0, 0, 0, 0.24);
   --elevation-shadow-key-brand: rgba(0, 0, 0, 0.31);
-  --gradient-default: #ffffff;
   --background-brand-hover-opacity-20: rgba(23, 107, 87, 0.2);
   --background-danger-hover-opacity-20: rgba(200, 22, 64, 0.2);
   --background-hover-opacity-50: rgba(235, 235, 234, 0.5);
@@ -1088,7 +1038,10 @@
 [data-theme=vert_foret][data-mode=dark] {
   --background-default: #201f1f;
   --background-hover: #3e3e3d;
-  --background-pressed: #595958;
+  --background-neutral-regular-default: #595958;
+  --background-neutral-regular-hover: #7f7e7e;
+  --background-neutral-bold-default: #cdcccb;
+  --background-neutral-bold-hover: #ebebea;
   --background-disabled: #3e3e3d;
   --background-inverse: #ffffff;
   --background-brand-default: #81d4b7;
@@ -1104,13 +1057,13 @@
   --background-danger-default: #f97385;
   --background-danger-hover: #f14662;
   --background-danger-pressed: #de2048;
+  --background-status-info-regular: #53aaff;
   --background-status-info-subtle: #d8ebff;
-  --background-status-info: #53aaff;
-  --background-status-warning: #ffe500;
+  --background-status-warning-regular: #ffe500;
   --background-status-warning-subtle: #faffc1;
-  --background-status-success: #3cec96;
+  --background-status-success-regular: #3cec96;
   --background-status-success-subtle: #b5fdd9;
-  --background-status-alert: #f14662;
+  --background-status-alert-regular: #f14662;
   --background-status-alert-subtle: #ffe4e6;
   --border-primary: #a1a1a0;
   --border-secondary: #737272;
@@ -1177,8 +1130,6 @@
   --content-secondary: #e1e1e0;
   --content-tertiary: #b7b7b6;
   --content-primary-inverse: #201f1f;
-  --content-secondary-inverse: #3e3e3d;
-  --content-tertiary-inverse: #737272;
   --content-disabled: #595958;
   --content-brand-default: #f5fcfa;
   --content-brand-hover: #effaf6;
@@ -1191,17 +1142,7 @@
   --content-link-visited-press: #d2c3e4;
   --content-danger: #f97385;
   --content-danger-hover: #f14662;
-  --content-danger-press: #de2048;
   --content-danger-inverse: #ffffff;
-  --content-info: #2b86ff;
-  --content-info-inverse: #ffffff;
-  --content-info-bold: #53aaff;
-  --content-warning: #f4922b;
-  --content-warning-inverse: #ffffff;
-  --content-warning-bold: #f6ab4d;
-  --content-success: #09b05f;
-  --content-success-inverse: #ffffff;
-  --content-success-bold: #12d577;
   --content-decorative: #201f1f;
   --content-status: #201f1f;
   --decorative-neutral: #ebebea;
@@ -1237,7 +1178,6 @@
   --elevation-shadow-key: rgba(0, 0, 0, 0.28);
   --elevation-shadow-key-darker: rgba(0, 0, 0, 0.48);
   --elevation-shadow-key-brand: rgba(0, 0, 0, 0.21);
-  --gradient-default: #ffffff;
   --background-brand-hover-opacity-20: rgba(179, 231, 209, 0.2);
   --background-danger-hover-opacity-20: rgba(241, 70, 98, 0.2);
   --background-hover-opacity-50: rgba(62, 62, 61, 0.5);
