fix(icon button toggle): add correct behaviour on click

--- a/test-apps/angular/src/app/app.component.html
+++ b/test-apps/angular/src/app/app.component.html
@@ -21,7 +21,7 @@
 
 <hr />
 
-<rte-icon-button-toggle name="home" />
+<rte-icon-button-toggle name="home" [selected]="selected()" (click)="onClick($event)"/>
 
 <hr />
 
